added realestatemanagement page

--- a/src/assets/scss/pages/_realestatemanagement.scss
+++ b/src/assets/scss/pages/_realestatemanagement.scss
@@ -1,4 +1,4 @@
-.real_estate_purchase {
+.real_estate_management {
 	position: relative;
 
 	.c-banner {
@@ -16,6 +16,15 @@
 		&--ttl {
 			p {
 				&:nth-child(1) {
+					@include is-max(960px) {
+						font-size: 3.3vw;
+					}
+
+					@include is-sp {
+						line-height: 1.5;
+						font-size: 25px;
+					}
+
 					@include is-max(400px) {
 						font-size: 7vw;
 						;
@@ -23,10 +32,27 @@
 				}
 
 				&:nth-child(2) {
+					@include is-max(960px) {
+						font-size: 1.4vw;
+					}
+
+					@include is-sp {
+						font-size: 13px;
+						line-height: 1.5;
+					}
+
 					@include is-max(400px) {
 						font-size: 3vw;
 						;
 					}
+				}
+			}
+
+			.br-sp {
+				display: none;
+
+				@include is-sp {
+					display: block;
 				}
 			}
 		}
@@ -128,6 +154,10 @@
 				letter-spacing: 2px;
 			}
 
+			@include is-max(340px) {
+				font-size: 7.3vw;
+			}
+
 			.ttl_small {
 				font-family: yu-mincho-pr6n, sans-serif;
 				@include font-line(20, 35);
@@ -142,6 +172,18 @@
 				@include is-max(375px) {
 					@include font-line(10, 15);
 				}
+
+				@include is-max(440px) {
+					font-size: 2.8vw;
+				}
+			}
+
+			.br-sp {
+				display: none;
+
+				@include is-sp {
+					display: block;
+				}
 			}
 		}
 
@@ -151,9 +193,23 @@
 			color: #fff;
 			letter-spacing: 0.2em;
 
-			@include is-max(750px) {
+
+			@include is-sp {
 				@include font-line(13, 25);
-				text-align: left;
+				text-align: center;
+				letter-spacing: 0.1em;
+			}
+
+			@include is-max(370px) {
+				font-size: 3.4vw;
+			}
+
+			.br-sp {
+				display: none;
+
+				@include is-sp {
+					display: block;
+				}
 			}
 		}
 
@@ -267,6 +323,7 @@
 			position: relative;
 
 			@include is-sp {
+				letter-spacing: 0.1em;
 				padding-bottom: 25px;
 			}
 		}
@@ -347,6 +404,10 @@
 					padding-top: 15px;
 					padding-bottom: 15px;
 					border: 1px solid #8bb1d0;
+
+					@include is-sp {
+						padding: 15px;
+					}
 
 					&_ttl {
 						font-family: century-gothic, sans-serif;
@@ -608,6 +669,14 @@
 				order: 1;
 				padding-bottom: 25px;
 			}
+
+			.br-sp {
+				display: none;
+
+				@include is-sp {
+					display: block;
+				}
+			}
 		}
 
 		.l-wrap {
@@ -622,11 +691,11 @@
 
 		&__eng--ttl {
 			font-family: century-gothic, sans-serif;
-			@include font-line(13, 20);
+			@include font-line(10, 20);
 			color: #9ec4e3;
 			letter-spacing: 0.21em;
 			text-align: left;
-			font-weight: 600;
+			font-weight: 400;
 			margin-bottom: 5px;
 		}
 
@@ -651,6 +720,7 @@
 
 			@include is-max(750px) {
 				margin-bottom: 20px;
+				letter-spacing: 0.05em;
 			}
 		}
 
@@ -668,6 +738,7 @@
 			@include is-max(750px) {
 				flex-direction: column-reverse;
 				display: grid;
+				padding-bottom: 75px;
 			}
 
 			&--left,
@@ -699,7 +770,7 @@
 					color: #4688c8;
 					font-family: yu-mincho-pr6n, sans-serif;
 					font-weight: 500;
-					letter-spacing: 0.15em;
+					letter-spacing: 0.01em;
 				}
 			}
 
@@ -725,6 +796,10 @@
 					padding-top: 25px;
 					text-align: justify;
 				}
+
+				@include is-sp {
+					letter-spacing: 0.08em;
+				}
 			}
 
 			.point {
@@ -734,6 +809,10 @@
 				padding-top: 15px;
 				padding-bottom: 15px;
 				border: 2px solid #87b2db;
+
+				@include is-sp {
+					padding: 15px;
+				}
 
 				&_ttl {
 					font-family: century-gothic, sans-serif;
@@ -787,6 +866,7 @@
 			position: absolute;
 			left: 46%;
 			top: 5px;
+			opacity: 0.50;
 
 			@include is-sp {
 				width: 100px;
@@ -816,6 +896,7 @@
 			position: absolute;
 			left: 0;
 			bottom: 10%;
+			opacity: 0.50;
 
 			@include is-sp {
 
@@ -922,6 +1003,7 @@
 						padding-right: unset;
 						padding-top: 25px;
 						text-align: justify;
+						letter-spacing: 0.08em;
 					}
 				}
 
@@ -932,6 +1014,10 @@
 					padding-top: 15px;
 					padding-bottom: 15px;
 					border: 1px solid #8bb1d0;
+
+					@include is-sp {
+						padding: 15px;
+					}
 
 					&_ttl {
 						font-family: century-gothic, sans-serif;
@@ -949,6 +1035,7 @@
 						@include font-line(9, 26);
 						color: #87b2db;
 						font-weight: 700;
+						letter-spacing: -0.09em;
 
 						span {
 							margin-left: 10px;
@@ -956,6 +1043,10 @@
 							color: #2589ce;
 							@include font-line(13, 26);
 							letter-spacing: 0.2em;
+
+							@include is-sp {
+								letter-spacing: 0.08em;
+							}
 						}
 					}
 				}
@@ -965,6 +1056,10 @@
 
 			.br-point {
 				display: block;
+
+				@include is-sp {
+					width: 100%;
+				}
 
 				@include is-sp {
 					.br-pc {
@@ -982,6 +1077,7 @@
 		.c-buttonREP {
 			.txt {
 				letter-spacing: 0.2em;
+				font-size: 15px
 			}
 		}
 
@@ -1000,14 +1096,14 @@
 			}
 
 			@include is-max(400px) {
-				font-size: 6vw;
+				font-size: 5.7vw;
 			}
 		}
 
 		&__box-big-new {
 			position: absolute;
 			left: 60%;
-			top: -3%;
+			top: -1%;
 
 			@include is-sp {
 				left: auto;
@@ -1058,6 +1154,10 @@
 			flex-wrap: wrap;
 			flex-direction: row-reverse;
 			padding: 90px 0;
+
+			@include is-sp {
+				padding: 70px 0;
+			}
 
 			@include is-max(750px) {
 				display: grid;
@@ -1110,6 +1210,7 @@
 						padding-right: unset;
 						padding-top: 25px;
 						text-align: justify;
+						letter-spacing: 0.08em;
 					}
 				}
 
@@ -1120,6 +1221,10 @@
 					padding-top: 15px;
 					padding-bottom: 15px;
 					border: 1px solid #8bb1d0;
+
+					@include is-sp {
+						padding: 15px;
+					}
 
 					&_ttl {
 						font-family: century-gothic, sans-serif;
@@ -1165,6 +1270,10 @@
 		padding-bottom: 33px;
 		background: linear-gradient(to right, #003782, #0059b6);
 
+		@include is-sp {
+			margin-top: 20px;
+		}
+
 		.c-buttonREP {
 			margin-top: 0;
 
@@ -1177,6 +1286,7 @@
 			position: absolute;
 			left: 46%;
 			top: -12%;
+			opacity: 0.50;
 
 			@include is-sp {
 				top: -6%;
@@ -1190,6 +1300,7 @@
 			position: absolute;
 			left: 0;
 			top: 24%;
+			opacity: 0.50;
 
 			@include is-sp {
 				// width: 115px;
@@ -1283,8 +1394,10 @@
 			letter-spacing: 0.2em;
 			margin-bottom: 70px;
 
-			@include is-max(750px) {
+			@include is-sp {
 				text-align: justify;
+				margin-bottom: 25px;
+
 			}
 		}
 
@@ -1474,7 +1587,7 @@
 			color: #94c5e6;
 			letter-spacing: 0.32em;
 			text-align: left;
-			font-weight: 600;
+			font-weight: 400;
 			margin-bottom: 5px;
 
 			@include is-max(750px) {
@@ -1642,6 +1755,10 @@
 		padding-right: 30px;
 		padding-top: 15px;
 		padding-bottom: 15px;
+
+		@include is-sp {
+			padding: 15px;
+		}
 
 		&_ttl {
 			font-family: century-gothic, sans-serif;
