--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -34,7 +34,6 @@
 					display: block;
 				}
 			}
-
 		}
 	}
 
@@ -62,17 +61,17 @@
 		}
 	}
 
-	.text {
-		width: 100%;
+	// .text {
+	// 	width: 100%;
 
-		&:nth-of-type(10) {
-			width: unset;
-		}
+	// 	&:nth-of-type(10) {
+	// 		width: unset;
+	// 	}
 
-		&:nth-of-type(11) {
-			width: unset;
-		}
-	}
+	// 	&:nth-of-type(11) {
+	// 		width: unset;
+	// 	}
+	// }
 
 	&__bg-white {
 		background-color: #fff;
@@ -135,7 +134,6 @@
 		display: flex;
 		align-items: center;
 		position: relative;
-		z-index: 1;
 		padding: 20px 0;
 
 		&::before {
@@ -151,66 +149,13 @@
 				background-color: #fff;
 				content: none;
 			}
-
 		}
 
-		&:nth-child(1) {
+		&.first {
+			border-bottom: 1px solid #258acf;
 			border-top: 1px solid #258acf;
-			border-bottom: 1px solid #258acf;
-
-			@include is-sp {
-				flex-direction: column;
-			}
-
-			.col-1 {
-				@include is-sp {
-					width: 100%;
-					background-color: #e2f3fb;
-					padding: 5px 0;
-				}
-
-				label {
-					padding-left: 0;
-				}
-			}
-
-			.col-2 {
-				@include is-sp {
-					flex-direction: column;
-					width: 100%;
-					padding: 20px 0;
-				}
-
-				div {
-
-					&:nth-child(1),
-					&:nth-child(2) {
-						@include is-sp {
-							width: 100%;
-						}
-					}
-
-					&:nth-child(1) {
-						@include is-sp {
-							padding-bottom: 20px;
-						}
-					}
-
-					label {
-						@include is-sp {
-							padding-left: 0;
-						}
-					}
-				}
-			}
-
-			label {
-				padding-left: 30px;
-			}
-		}
-
-		&:nth-child(2) {
-			border-bottom: 1px solid #258acf;
+			z-index: 4;
+			position: relative;
 
 			@include is-sp {
 				flex-direction: column;
@@ -237,12 +182,10 @@
 				}
 
 				div {
-
 					&:nth-child(1),
 					&:nth-child(2) {
 						@include is-sp {
 							width: 100%;
-
 						}
 
 						&:nth-child(1) {
@@ -265,8 +208,44 @@
 			}
 		}
 
-		&:nth-child(3) {
+		&.second {
 			border-bottom: 1px solid #258acf;
+			z-index: 4;
+
+			@include is-sp {
+				flex-direction: column;
+			}
+
+			.col-1 {
+				@include is-sp {
+					width: 100%;
+					background-color: #e2f3fb;
+					padding: 5px 0;
+				}
+			}
+
+			.col-2 {
+				@include is-sp {
+					padding-top: 20px;
+					width: 100%;
+				}
+
+				// div {
+				// 	&:nth-child(1) {
+				// 		width: 100%;
+				// 		padding-left: 30px;
+
+				// 		@include is-sp {
+				// 			padding-left: 0;
+				// 		}
+				// 	}
+				// }
+			}
+		}
+
+		&.third {
+			border-bottom: 1px solid #258acf;
+			z-index: 4;
 
 			@include is-sp {
 				flex-direction: column;
@@ -299,42 +278,9 @@
 			}
 		}
 
-		&:nth-child(4) {
+		&.fourth {
 			border-bottom: 1px solid #258acf;
-
-			@include is-sp {
-				flex-direction: column;
-			}
-
-			.col-1 {
-				@include is-sp {
-					width: 100%;
-					background-color: #e2f3fb;
-					padding: 5px 0;
-				}
-			}
-
-			.col-2 {
-				@include is-sp {
-					padding-top: 20px;
-					width: 100%;
-				}
-
-				div {
-					&:nth-child(1) {
-						width: 100%;
-						padding-left: 30px;
-
-						@include is-sp {
-							padding-left: 0;
-						}
-					}
-				}
-			}
-		}
-
-		&:nth-child(5) {
-			border-bottom: 1px solid #258acf;
+			z-index: 4;
 
 			@include is-sp {
 				flex-direction: column;
@@ -385,8 +331,9 @@
 			}
 		}
 
-		&:nth-child(6) {
+		&.fifth {
 			border-bottom: 1px solid #258acf;
+			z-index: 4;
 
 			@include is-sp {
 				flex-direction: column;
@@ -402,6 +349,7 @@
 
 			.col-2 {
 				justify-content: center;
+				flex-wrap: wrap;
 
 				@include is-sp {
 					width: 100%;
@@ -409,13 +357,27 @@
 					justify-content: space-between;
 				}
 
+				label {
+					padding-right: 15px;
+					width: 115px;
+				}
+
+				span {
+					width: 90%;
+				}
+
 				div {
 					&:nth-child(1) {
-						width: 26%;
+						width: 100%;
+						padding-bottom: 10px;
 
 						@include is-sp {
 							width: 30%;
 						}
+					}
+
+					&:nth-child(2) {
+						width: 100%;
 					}
 
 					&:nth-child(3) {
@@ -434,15 +396,68 @@
 						}
 					}
 				}
+			}
+		}
 
-				span {
+		&.sixth {
+			border-bottom: 1px solid #258acf;
+			z-index: 4;
+
+			@include is-sp {
+				flex-direction: column;
+				padding-top: 0;
+			}
+
+			.col-1 {
+				@include is-sp {
+					background-color: #e2f3fb;
+					width: 100%;
+					padding: 5px 0;
+				}
+			}
+
+			.col-2 {
+				justify-content: flex-start;
+				padding-left: 20px;
+
+				@include is-sp {
+					padding-top: 20px;
+					padding-left: 0;
+					width: 100%;
+				}
+
+				div {
+					&:nth-child(1) {
+						width: 28%;
+
+						@include is-sp {
+							width: 100%;
+						}
+					}
+					&:nth-child(3) {
+						width: 28%;
+
+						@include is-sp {
+							width: 100%;
+						}
+					}
+					&:nth-child(5) {
+						width: 28%;
+						@include is-sp {
+							width: 100%;
+						}
+					}
+				}
+
+				p {
 					width: 30px;
 				}
 			}
 		}
 
-		&:nth-child(7) {
+		&.seventh {
 			border-bottom: 1px solid #258acf;
+			z-index: 4;
 
 			@include is-sp {
 				flex-direction: column;
@@ -458,8 +473,7 @@
 
 			.col-2 {
 				justify-content: center;
-				flex-direction: column;
-				padding-left: 20px;
+				flex-wrap: wrap;
 
 				@include is-sp {
 					width: 100%;
@@ -467,8 +481,29 @@
 					padding-top: 20px;
 				}
 
+				p {
+					width: 30px;
+
+					&:last-child {
+						width: unset;
+					}
+				}
+
+				div {
+					&:nth-child(1) {
+						width: 100%;
+					}
+					&:nth-child(3) {
+						width: 100%;
+					}
+					&:nth-child(5) {
+						width: 100%;
+					}
+				}
+
 				.pc-hide {
 					display: block;
+					width: 26%;
 
 					@include is-sp {
 						display: none;
@@ -515,8 +550,6 @@
 						}
 
 						&:nth-child(6) {
-							width: 26%;
-
 							p {
 								border-radius: 10px;
 								background-color: #258acf;
@@ -615,22 +648,18 @@
 					}
 				}
 
-				span {
-					width: 30px;
-				}
-
 				.hidden {
 					visibility: hidden;
 				}
 			}
 		}
 
-		&:nth-child(8) {
+		&.eighth {
 			border-bottom: 1px solid #258acf;
+			z-index: 4;
 
 			@include is-sp {
 				flex-direction: column;
-				padding-top: 0;
 			}
 
 			.col-1 {
@@ -643,54 +672,35 @@
 
 			.col-2 {
 				justify-content: flex-start;
-				padding-left: 20px;
+				padding-left: 30px;
 
 				@include is-sp {
-					padding-top: 20px;
 					padding-left: 0;
+					padding-top: 20px;
 					width: 100%;
 				}
 
 				div {
 					&:nth-child(1) {
 						width: 28%;
-
-						@include is-sp {
-							width: 100%;
-						}
 					}
 				}
 			}
 		}
 
-		&:nth-child(9) {
+		&.nineth {
 			border-bottom: 1px solid #258acf;
-
-			@include is-sp {
-				flex-direction: column;
-			}
-
-			.col-1 {
-				@include is-sp {
-					background-color: #e2f3fb;
-					width: 100%;
-					padding: 5px 0;
-				}
-			}
+			z-index: 4;
 
 			.col-2 {
-				justify-content: flex-start;
-				padding-left: 20px;
+				padding-left: 30px;
 
-				@include is-sp {
-					padding-left: 0;
-					padding-top: 20px;
-					width: 100%;
-				}
+				.w_100 {
+					width: 100% !important;
 
-				div {
-					&:nth-child(1) {
+					span {
 						width: 100%;
+						display: inherit;
 					}
 				}
 			}
@@ -744,7 +754,7 @@
 		}
 
 		label {
-			letter-spacing: 0.20em;
+			letter-spacing: 0.2em;
 			text-align: left;
 			@include font-line(13);
 			font-family: cross-platform-yu-gothic, sans-serif;
@@ -758,10 +768,10 @@
 			padding: 15px 0 0 0;
 		}
 
-		.br-sp{
+		.br-sp {
 			display: none;
-			@include is-sp{
-				display: block
+			@include is-sp {
+				display: block;
 			}
 		}
 
@@ -794,9 +804,7 @@
 			.btn {
 				background-color: #258acf;
 			}
-
 		}
-
 	}
 
 	.col-1 {
@@ -814,7 +822,6 @@
 		align-items: center;
 
 		div {
-
 			&:nth-child(1),
 			&:nth-child(2) {
 				display: flex;
@@ -824,10 +831,8 @@
 
 			label {
 				width: 100px;
+				padding-left: 30px;
 			}
 		}
 	}
-
-
-
 }
