--- a/src/assets/scss/pages/_realestatemanagement.scss
+++ b/src/assets/scss/pages/_realestatemanagement.scss
@@ -1288,6 +1288,11 @@
 			top: -12%;
 			opacity: 0.50;
 
+			@include is-max(1075px) {
+				left: 52%;
+				top: -7%;
+			}
+
 			@include is-sp {
 				top: -6%;
 				width: 122px;
