--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -377,9 +377,11 @@
 			left: -9px;
 			width: 35px;
 			height: 35px;
-			background: radial-gradient(#ffdb2c 10%,
-					rgba(255, 105, 34, 0.65) 55%,
-					rgba(255, 88, 96, 0) 70%);
+			background: radial-gradient(
+				#ffdb2c 10%,
+				rgba(255, 105, 34, 0.65) 55%,
+				rgba(255, 88, 96, 0) 70%
+			);
 		}
 	}
 
@@ -418,6 +420,11 @@
 		img {
 			right: 15px;
 		}
+	}
+
+	&.blue {
+		background-color: #258acf;
+		color: #fff;
 	}
 
 	// &:hover{
@@ -508,7 +515,7 @@
 	text-align: center;
 	margin-top: 95px;
 
-	@include is-sp{
+	@include is-sp {
 		margin-top: 50px;
 	}
 
