--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -425,6 +425,9 @@
 	&.blue {
 		background-color: #258acf;
 		color: #fff;
+		padding: 20px 0;
+		margin-top: 48px;
+		line-height: 1;
 	}
 
 	// &:hover{
