--- a/src/assets/scss/pages/_result.scss
+++ b/src/assets/scss/pages/_result.scss
@@ -97,8 +97,11 @@
 			text-align: center;
 			letter-spacing: 0.32em;
 			line-height: 1;
-
 			@include font-line(10);
+
+			@include is-sp{
+				color: #9dc2e1;
+			}
 		}
 
 		&__charts {
